--- a/index.html
+++ b/index.html
@@ -59,9 +59,8 @@
       <h3>Frage 2:<br>Welche Sauerstoffapplikation führt am zuverlässigsten zu einer FiO₂ von nahezu 100 %?</h3>
       <label><input type="radio" name="q2" value="A"> A. Nasenbrille mit 6 l/min</label>
       <label><input type="radio" name="q2" value="B"> B. Gesichtsmaske ohne Reservoir</label>
-      <label><input type="radio" name="q2" value="C"> C. Venturi-Maske mit 8 l/min</label>
-      <label><input type="radio" name="q2" value="D"> D. Gesichtsmaske mit Reservoirbeutel bei 15 l/min</label>
-      <label><input type="radio" name="q2" value="E"> E. Nasensonde bei 4 l/min</label>
+      <label><input type="radio" name="q2" value="C"> C. Gesichtsmaske mit Reservoirbeutel bei 15 l/min</label>
+      <label><input type="radio" name="q2" value="D"> D. Nasensonde bei 4 l/min</label>
     </div>
 
     <div class="question">
